separation of concerns.  Unused as of now.